Try to fix bottom cut off problem on mobile

--- a/style.css
+++ b/style.css
@@ -207,11 +207,16 @@ body {
 }
 
 #sliding-pages > div::after {
-    display:    block;
-    content:    "";
-    width:      100%;
-    height:     1px;
-    margin-top: 20px;
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+    content:         "-";
+    color:           transparent;
+    user-select:     none;
+    overflow:        hidden;
+    width:           100%;
+    height:          1px;
+    margin-top:      20px;
 }
 
 #sliding-pages > div::-webkit-scrollbar {
